# Pontinho

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: CMakeLists.txt
src/: main.cpp
widget/: CMakeLists.txt
widget/src/: Column.hpp  Container.hpp  Row.hpp  Text.hpp  Widget.hpp  WidgetContext.hpp
